# qa_guru_advanced_intro

./: README.md  conftest.py  pyproject.toml
microservice/: microservice.py  microservice_delete.py  users.py
microservice/models/: get_single_user.py  post_create.py  post_register.py  put_update.py
schemas/: post_400.json
test_api/helper/: attach_helpers.py  get_env_path.py  utils.py
test_api/tests/: test_delete_204_succesfully.py  test_get_single_user_successfully.py  test_post_create_201_succesfully.py  test_post_register_400_unsuccessfully.py  test_put_update_200_succesfully.py
test_api/tests/allure-results/: 0d302264-a5db-4a85-9824-9d05fc8045c2-container.json  3363f5ef-0542-4a92-80f1-889eb61615ee-result.json  57fff8f5-d6a6-4ed9-bc1b-2788aadd1cf7-attachment.html  69b22ec3-7946-41f4-8035-928cb4783aa9-attachment.html  78f474ee-759e-4f5d-8f6d-f130b3e39752-result.json  792946bb-63c2-4548-9283-a41665b60b30-container.json
